<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0
         https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>3.5.3</version>
        <relativePath/>
    </parent>

    <groupId>com.springairag</groupId>
    <artifactId>spring-ai-rag</artifactId>
    <version>1.0.0-SNAPSHOT</version>
    <packaging>pom</packaging>
    <name>Spring AI RAG</name>
    <description>General-purpose RAG (Retrieval-Augmented Generation) service framework based on Spring AI</description>

    <properties>
        <java.version>21</java.version>
        <spring-ai.version>1.1.4</spring-ai.version>
        <springdoc.version>2.8.4</springdoc.version>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
    </properties>

    <modules>
        <module>spring-ai-rag-api</module>
        <module>spring-ai-rag-core</module>
        <module>spring-ai-rag-starter</module>
        <module>spring-ai-rag-documents</module>
    </modules>

    <dependencyManagement>
        <dependencies>
            <!-- Spring AI BOM -->
            <dependency>
                <groupId>org.springframework.ai</groupId>
                <artifactId>spring-ai-bom</artifactId>
                <version>${spring-ai.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
            <!-- Swagger Annotations -->
            <dependency>
                <groupId>io.swagger.core.v3</groupId>
                <artifactId>swagger-annotations-jakarta</artifactId>
                <version>2.2.22</version>
            </dependency>
            <!-- Project module version management -->
            <dependency>
                <groupId>com.springairag</groupId>
                <artifactId>spring-ai-rag-api</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.springairag</groupId>
                <artifactId>spring-ai-rag-core</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.springairag</groupId>
                <artifactId>spring-ai-rag-documents</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.springairag</groupId>
                <artifactId>spring-ai-rag-starter</artifactId>
                <version>${project.version}</version>
            </dependency>
            <!-- Testcontainers BOM -->
            <dependency>
                <groupId>org.testcontainers</groupId>
                <artifactId>testcontainers-bom</artifactId>
                <version>1.20.4</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
            <!-- Spring AI modules (BOM may not propagate in multi-module, explicitly declared) -->
            <dependency>
                <groupId>org.springframework.ai</groupId>
                <artifactId>spring-ai-model</artifactId>
                <version>${spring-ai.version}</version>
            </dependency>
            <dependency>
                <groupId>org.springframework.ai</groupId>
                <artifactId>spring-ai-client-chat</artifactId>
                <version>${spring-ai.version}</version>
            </dependency>
            <dependency>
                <groupId>org.springframework.ai</groupId>
                <artifactId>spring-ai-commons</artifactId>
                <version>${spring-ai.version}</version>
            </dependency>
            <dependency>
                <groupId>org.springframework.ai</groupId>
                <artifactId>spring-ai-rag</artifactId>
                <version>${spring-ai.version}</version>
            </dependency>
            <dependency>
                <groupId>org.springframework.ai</groupId>
                <artifactId>spring-ai-vector-store</artifactId>
                <version>${spring-ai.version}</version>
            </dependency>
            <dependency>
                <groupId>org.springframework.ai</groupId>
                <artifactId>spring-ai-advisors-vector-store</artifactId>
                <version>${spring-ai.version}</version>
            </dependency>
            <!-- REST Assured (for OpenAPI contract testing) -->
            <dependency>
                <groupId>io.rest-assured</groupId>
                <artifactId>rest-assured</artifactId>
                <version>5.4.0</version>
                <scope>test</scope>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <build>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-surefire-plugin</artifactId>
                    <configuration>
                        <argLine>@{argLine}</argLine>
                    </configuration>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-compiler-plugin</artifactId>
                    <configuration>
                        <source>${java.version}</source>
                        <target>${java.version}</target>
                    </configuration>
                </plugin>
                <plugin>
                    <groupId>org.jacoco</groupId>
                    <artifactId>jacoco-maven-plugin</artifactId>
                    <version>0.8.13</version>
                    <executions>
                        <execution>
                            <id>prepare-agent</id>
                            <goals><goal>prepare-agent</goal></goals>
                        </execution>
                        <execution>
                            <id>report</id>
                            <phase>test</phase>
                            <goals><goal>report</goal></goals>
                        </execution>
                    </executions>
                </plugin>
            </plugins>
        </pluginManagement>
    </build>

    <!--
      ============================================================
      GraalVM Native Image Support (reserved, enable after GraalVM toolchain is installed)
      ============================================================
      Usage:
        1. Install GraalVM 24+ (includes native-image tool)
        2. Add spring-native dependency to spring-ai-rag-starter/pom.xml:
           <dependency>
             <groupId>org.springframework.experimental</groupId>
             <artifactId>spring-native</artifactId>
             <version>${spring-native.version}</version>
           </dependency>
        3. In spring-ai-rag-core/src/main/resources/META-INF/native-image/
           add reflect-config.json + resource-config.json
        4. Run: mvn -Pnative clean package -DskipTests
      Reference: https://docs.spring.io/spring-boot/reference/native-image/index.html
      ============================================================
    -->
</project>
